<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/text_sign_in_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/monserrat_regular"
        android:text="@string/teks_login"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="@dimen/title_big_font"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginTop="@dimen/width30"
        android:lineSpacingExtra="@dimen/margin_standard"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard_big"
        android:text="@string/please_login_to_continue_using_our_app"
        android:textStyle="bold"
        android:textColor="@color/gray2"
        android:layout_marginLeft="@dimen/margin_big"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/putih"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/width130"
            android:orientation="horizontal"
            >
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:src="@drawable/logo_kapcake"
                android:layout_gravity="center_horizontal"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/width60"
            app:cardElevation="@dimen/margin_standard"
            app:cardCornerRadius="@dimen/margin_standard"
            app:cardBackgroundColor="@color/putih"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginRight="@dimen/width30"
            android:paddingLeft="@dimen/margin_standard"
            android:paddingRight="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard_big"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person_gray"
                        android:layout_centerVertical="true"
                        android:id="@+id/imgUser"
                        android:layout_marginLeft="@dimen/margin_standard"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/imgUser"
                        android:background="@android:color/transparent"
                        android:id="@+id/etUser"
                        android:inputType="textPersonName"
                        android:hint="@string/username"
                        android:textColorHint="@color/gray2"
                        android:layout_marginLeft="@dimen/margin_standard"
                        android:layout_marginRight="@dimen/margin_standard"
                        android:textColor="@color/hitam"
                        android:textSize="@dimen/text_font"
                        />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/width60"
            app:cardElevation="@dimen/margin_standard"
            app:cardCornerRadius="@dimen/margin_standard"
            app:cardBackgroundColor="@color/putih"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginRight="@dimen/width30"
            android:paddingLeft="@dimen/margin_standard"
            android:paddingRight="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_password_gray"
                    android:layout_centerVertical="true"
                    android:id="@+id/imgPass"
                    android:layout_marginLeft="@dimen/margin_standard"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/imgPass"
                    android:layout_toLeftOf="@+id/btnTogle"
                    android:background="@android:color/transparent"
                    android:id="@+id/etPass"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray2"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_standard"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/text_font"
                    />
                <ImageButton
                    android:layout_width="@dimen/width40"
                    android:layout_height="@dimen/width40"
                    android:src="@drawable/ic_eye_gray"
                    android:background="@drawable/button_circle"
                    android:layout_centerVertical="true"
                    android:id="@+id/btnTogle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_small"

                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/width30"
            android:layout_marginRight="@dimen/width30"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_standard"
            android:fontFamily="@font/monserrat_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/hitamGray2"
            android:textSize="@dimen/text_font"
            android:id="@+id/textForgot"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/width60"
            android:background="@drawable/border_round_full_orange"
            android:elevation="@dimen/margin_standard"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginRight="25dp"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginBottom="@dimen/margin_standard"
            android:id="@+id/btnMasuk"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MASUK"
                android:textColor="@color/putih"
                android:textSize="@dimen/title_big_font"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_big"
            >
            <TextView
                android:id="@+id/have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_login"
                android:fontFamily="@font/monserrat_regular"
                android:text="Don't have account?"
                android:textColor="@color/hitam"
                android:textSize="@dimen/text_font" />


            <TextView
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="Sign up"
                android:textColor="@color/biru"
                android:id="@+id/textDaftar"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>